--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "joi": "^17.10.0",
+    "jsonwebtoken": "^9.0.1",
+    "sequelize": "^6.32.1"
   }
 }
