installed more packages and added scripts.

--- a/package.json
+++ b/package.json
@@ -3,14 +3,35 @@
   "version": "1.0.0",
   "description": "backend of charm health hackathon",
   "main": "index.js",
-  "repository": "https://will-fill-this-later.git",
+  "repository": "https://github.com/wachukxs/charm-health-be.git",
   "author": "@wachukxs",
+  "scripts": {
+    "test": "echo \"Error: no test specified... yet\" && exit 1",
+    "start:dev": "DEV=true nodemon  --ignore '*.json' --exec 'node ./swagger.js && node --trace-warnings --unhandled-rejections=warn ./index.js'",
+    "overtly-dev": "nodemon --trace-sync-io --trace-warnings --unhandled-rejections=warn ./index.js",
+    "start": "node ./swagger.js && node --trace-warnings --unhandled-rejections=warn ./index.js",
+    "migrate-db": "node_modules/.bin/sequelize db:migrate",
+    "seed-db": "node_modules/.bin/sequelize db:seed:all",
+    "migrate:up": "npx sequelize-cli db:migrate",
+    "migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "migrate:undo:all": "npx sequelize-cli db:migrate:undo:all",
+    "swagger-autogen": "node ./swagger.js"
+  },
   "license": "MIT",
   "dependencies": {
+    "connect-session-sequelize": "^7.1.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "joi": "^17.10.0",
     "jsonwebtoken": "^9.0.1",
-    "sequelize": "^6.32.1"
+    "morgan": "^1.10.0",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.6",
+    "swagger-autogen": "^2.23.5",
+    "swagger-ui-express": "^5.0.0"
   }
 }
